--- a/css/main.css
+++ b/css/main.css
@@ -491,7 +491,7 @@ a:visited {
 
 #intro {
   text-align: center;
-  height: 80vh;
+  height: auto;
   margin-top: 6vw;
   display: -moz-flex;
   display: -ms-flexbox;
@@ -499,9 +499,6 @@ a:visited {
   -ms-flex-pack: center;
   -moz-justify-content: center;
   justify-content: center; }
-  @media (max-width: 768px) {
-    #intro {
-      margin-top: 20vw; } }
   #intro > div {
     -ms-flex-item-align: center;
     align-self: center;
@@ -583,9 +580,6 @@ a:visited {
 #about-homepage {
   max-width: 780px;
   margin: 2vw auto; }
-  @media (max-width: 768px) {
-    #about-homepage {
-      margin: 20vw auto; } }
   #about-homepage p {
     font-size: 24px; }
 
